// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lexer Comments code with # 1`] = `
[
  [
    1,
    "
      before",
    0,
    13,
  ],
  [
    5,
    "<%=",
    13,
    16,
  ],
  [
    11,
    " ",
    16,
    17,
  ],
  [
    10,
    "#",
    17,
    18,
  ],
  [
    11,
    " ",
    18,
    19,
  ],
  [
    14,
    "no",
    19,
    21,
  ],
  [
    11,
    " ",
    21,
    22,
  ],
  [
    14,
    "data",
    22,
    26,
  ],
  [
    11,
    " ",
    26,
    27,
  ],
  [
    3,
    "%>",
    27,
    29,
  ],
  [
    1,
    "after
      ",
    29,
    42,
  ],
  [
    0,
    null,
    42,
    43,
  ],
]
`;

exports[`Lexer Comments code with /* 1`] = `
[
  [
    1,
    "
      before",
    0,
    13,
  ],
  [
    5,
    "<%=",
    13,
    16,
  ],
  [
    11,
    " ",
    16,
    17,
  ],
  [
    13,
    "/* ok */",
    17,
    25,
  ],
  [
    11,
    " ",
    25,
    26,
  ],
  [
    14,
    "data",
    26,
    30,
  ],
  [
    11,
    " ",
    30,
    31,
  ],
  [
    3,
    "%>",
    31,
    33,
  ],
  [
    1,
    "after
      ",
    33,
    46,
  ],
  [
    0,
    null,
    46,
    47,
  ],
]
`;

exports[`Lexer Comments code with // 1`] = `
[
  [
    1,
    "
      before",
    0,
    13,
  ],
  [
    5,
    "<%=",
    13,
    16,
  ],
  [
    11,
    " ",
    16,
    17,
  ],
  [
    10,
    "//",
    17,
    19,
  ],
  [
    11,
    " ",
    19,
    20,
  ],
  [
    14,
    "no",
    20,
    22,
  ],
  [
    11,
    " ",
    22,
    23,
  ],
  [
    14,
    "data",
    23,
    27,
  ],
  [
    11,
    " ",
    27,
    28,
  ],
  [
    3,
    "%>",
    28,
    30,
  ],
  [
    1,
    "after
      ",
    30,
    43,
  ],
  [
    0,
    null,
    43,
    44,
  ],
]
`;

exports[`Lexer Comments injection 1`] = `
[
  [
    1,
    "
      before",
    0,
    13,
  ],
  [
    4,
    "<%# comment /* should break */ data %>",
    13,
    51,
  ],
  [
    1,
    "after
      ",
    51,
    64,
  ],
  [
    0,
    null,
    64,
    65,
  ],
]
`;

exports[`Lexer Comments simple 1`] = `
[
  [
    1,
    "
      before",
    0,
    13,
  ],
  [
    4,
    "<%# comment %>",
    13,
    27,
  ],
  [
    1,
    "after
      ",
    27,
    40,
  ],
  [
    0,
    null,
    40,
    41,
  ],
]
`;

exports[`Lexer Simple case 1`] = `
[
  [
    1,
    "
    <foo><%% 
    ",
    0,
    19,
  ],
  [
    4,
    "<%# comment %>",
    19,
    33,
  ],
  [
    1,
    "
    ",
    33,
    38,
  ],
  [
    7,
    "<%_",
    38,
    41,
  ],
  [
    11,
    " ",
    41,
    42,
  ],
  [
    14,
    "if",
    42,
    44,
  ],
  [
    11,
    " ",
    44,
    45,
  ],
  [
    17,
    "(",
    45,
    46,
  ],
  [
    14,
    "foo",
    46,
    49,
  ],
  [
    11,
    " ",
    49,
    50,
  ],
  [
    10,
    "=",
    50,
    51,
  ],
  [
    10,
    "=",
    51,
    52,
  ],
  [
    11,
    " ",
    52,
    53,
  ],
  [
    12,
    ""%>\\"%>"",
    53,
    61,
  ],
  [
    18,
    ")",
    61,
    62,
  ],
  [
    11,
    " ",
    62,
    63,
  ],
  [
    15,
    "{",
    63,
    64,
  ],
  [
    11,
    " ",
    64,
    65,
  ],
  [
    9,
    "_%>",
    65,
    68,
  ],
  [
    1,
    "
      ",
    68,
    75,
  ],
  [
    5,
    "<%=",
    75,
    78,
  ],
  [
    11,
    " ",
    78,
    79,
  ],
  [
    14,
    "bar",
    79,
    82,
  ],
  [
    11,
    " ",
    82,
    83,
  ],
  [
    3,
    "%>",
    83,
    85,
  ],
  [
    1,
    "
    ",
    85,
    90,
  ],
  [
    2,
    "<%",
    90,
    92,
  ],
  [
    11,
    " ",
    92,
    93,
  ],
  [
    16,
    "}",
    93,
    94,
  ],
  [
    11,
    " ",
    94,
    95,
  ],
  [
    3,
    "%>",
    95,
    97,
  ],
  [
    1,
    "
    </foo>
    ",
    97,
    114,
  ],
  [
    0,
    null,
    114,
    115,
  ],
]
`;
